Car Price Prediction
- In this project we are calculating and predicting the price of used car according to their
condition. from MACHINE LEARNING with full Deployment.

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         <form action="{{ url_for('predict')}}" method="post">
             <h2>Want to sell your car? Let's go!</h2>
             <h3>Year</h3>
-            <input id="first" name="Year Of Purchase?" type="number ">
+            <input id="first" name="Year" type="number ">
             <h3>What is the Showroom Price?(In lakhs)</h3><br><input id="second" name="Present_Price" required="required">
             <h3>How Many Kilometers Drived?</h3><input id="third" name="Kms_Driven" required="required">
             <h3>No of Previosu Owner(0 or 1 or 2) ?</h3><br><input id="fourth" name="Owner" required="required">
